--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
-title                    : "Avrajyoti Dutta's Personal Website" #"Your Name / Site Title"
+title                    : "Home" #"Your Name / Site Title"
 title_separator          : "-"
 name                     : &name "Avrajyoti Dutta" #"Your Name"
 description              : &description "Avrajyoti Dutta's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : https://qoe.agh.edu.pl/members/ #https://academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+#repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -24,16 +24,16 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.jpeg" #"profile.png"
-  name             : "Bio"
+  name             : "Avrajyoti Dutta" #"Bio"
   pronouns         : "He/His" # example: "she/her"  
   bio              : "Short biography" #"Short biography for the left-hand sidebar"
   location         : "Krakow" #"Earth"
   employer         : "AGH University of Krakow"
-  uri              : https://www.agh.edu.pl # URL
+  uri              : https://www.agh.edu.pl/en # URL
   email            : avrajyoti.dutta@agh.edu.pl #"none@example.org" 
 
   # Academic websites
-  academia         : https://qoe.agh.edu.pl/members/ # URL
+  #academia         : # URL
   #arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : https://scholar.google.com/citations?user=M5FFGSkAAAAJ&hl=en&oi=ao #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   #inspire-hep      : # URL
