--- a/_config.yml
+++ b/_config.yml
@@ -39,34 +39,34 @@ author:
   #inspire-hep      : # URL
   #impactstory      : # URL
   orcid            : https://orcid.org/0000-0001-5749-0256 #"https://orcid.org/yourorcidurl"
-  semantic         : # URL
+  #semantic         : # URL
   #ssrn             : # URL
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+  #researchgate     : # URL
+  #scopus           : # URL
   #zotero           : # URL
 
 
   # Repositories and software development
-  bitbucket        : # Username - Update with your username on the site
-  codepen          : # Username
-  dribbble         : # Username
-  github           : "academicpages"
-  kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  #bitbucket        : # Username - Update with your username on the site
+  #codepen          : # Username
+  #dribbble         : # Username
+  github            : "dutta-agh" #"academicpages"
+  #kaggle           : # Username  
+  #stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
   #artstation       : # Username
   #bluesky          : "bsky.app" # Replace this with you Bluesky username
-  facebook         : avrajyotidutta # Username
+  facebook          : avrajyotidutta # Username
   #flickr           : # Username
   #foursquare       : # Username
   #goodreads        : # Username
   #google_plus      : # Username
   #keybase          : # Username
-  instagram        : # Username
+  #instagram         : # Username
   #lastfm           : # Username
-  linkedin         : avrajyotidutta # Username
+  linkedin          : avrajyotidutta # Username
   #mastodon         : # URL
   #medium           : # URL
   #pinterest        : # Username
@@ -74,7 +74,7 @@ author:
   #steam            : # Username
   #telegram         : # URL
   #tumblr           : # Username
-  twitter          : avrajyotidutta # Username for X / Twitter
+  twitter           : avrajyotidutta # Username for X / Twitter
   #vine             : # Username
   #weibo            : # Username
   #wikipedia        : # Username
